Add indication of the type of response a cached resource came from

If a cached resource is from an opaque response, it will by design takes
up more cache storage space than its real size. The indication inside the
data grid of Application > Cache Storage shows the response type so users
won't be baffled about unexpectedly huge cache storage usage.

Resolved the merge conflict in CL1256018.

Bug: 847462
Change-Id: I885dd62cc3528d29fd4abd789e4727aca028ba59
Reviewed-on: https://chromium-review.googlesource.com/c/1259299
Reviewed-by: Erik Luo <luoe@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Haihong Li (Harley) <hhli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603096}